# TestLamp

./: CMakeLists.txt  README.md  execobj.cpp  execobj.h  formcoloroperator.cpp  formcoloroperator.h  formonoffexec.cpp  formonoffexec.h  formpaintexec.cpp  formpaintexec.h  lamp.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
